# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Added script broadcast-wpad-discover which detects proxy servers on the
  network by using the Web Proxy Auto Discover Protocol (WPAD). [Patrik]

o [NSE] Added local port to BPF filter in snmp-brute to fix bug that would
  prevent multiple scripts from receiving the correct responses. The bug was
  discovered by Brendan Bird. [Patrik]

o [NSE] Removed DoS code from dhcp-discover and placed it into the discover and
  safe categories. Added support for adding options to DHCP requests in the
  dhcp library. [Patrik]

o [NSE] Added a telnet-encryption script which detects if a remote
  telnet server supports the (weak) encryption option.  This is
  particularly interesting due to a remotely exploitable root
  vulnerability just discovered in FreeBSD's telnetd
  (FreeBSD-SA-11:08.telnetd). [Patrik, David, Fyodor]

o [NSE] Changed the dhcp-discover script to use the DHCPINFORM request to query
  dhcp servers instead of DHCPDISCOVER. Cleaned up some code in the DHCP
  library. [Patrik]

o [NSE] Added script dns-blacklist that performs DNSBL checks of given or
  scanned IP addresses against multiple DNSBL services. [Patrik]

o [NSE] Applied patch to snmp-brute that solves problems with handling errors
  that occur when parsing files with community lists. [Duarte Silva]

o [NSE] Applied patch to http-fingerprints adding support for identifying DCVS
  systems Git, Mercurial and Bazaar. [Hani Benhabiles]

o [NSE] Applied some code cleanup to the snmp library. [Brendan Byrd]

o [NSE] Fixed a bug with an undeclared variable in snmp-ios-config.nse [Patrik]

o On Windows, the directory <HOME>\AppData\Roaming\nmap is now
  searched for data files. This is the equivalent of $HOME/.nmap on
  POSIX. [David]

o [NSE] Applied patch to add additional version information to Mongodb scripts
  [Martin Swende]

o [NSE] Added path argument to the http-auth script and changed so that script